[EDP-DDM-18804] fix deleting process definition authorizations
Change-Id: I97cffe16e2f7e0aa2df34829c3a3377219ffd1b9